# terminal-ify

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
infra/: acm.tf  apigateway.tf  dynamodb.tf  lambda.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf
lambda/callback/: handler.py
terminal_ify/: __init__.py  app.py  client.py  player.py  themes.py
tests/: conftest.py  test_app.py  test_client.py  test_helpers.py  test_player.py  test_themes.py  test_ui.py
