[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminal-ify"
version = "0.1.0"
description = "A Spotify client for your terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "frontsidebus"},
]
keywords = ["spotify", "terminal", "tui", "music"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "textual>=0.47.0",
    "spotipy>=2.23.0",
    "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/frontsidebus/terminal-ify"
Repository = "https://github.com/frontsidebus/terminal-ify"
Issues = "https://github.com/frontsidebus/terminal-ify/issues"

[project.scripts]
terminal-ify = "terminal_ify.app:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["terminal_ify*"]
